--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -23,7 +23,7 @@
 
 .navbar .nav-links {
   display: flex;
-  gap: 20px;
+  gap: 0px;
   list-style: none;
   display: flex;
   gap: 25px;
@@ -38,4 +38,23 @@
 
 .nav-links li a:hover {
   color: #ffccff;
+}
+
+/* Profile Circle */
+.profile-circle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #ffccff; /* light pink, you can change */
+  color: #6a0dad; /* purple text */
+  font-weight: bold;
+  text-decoration: none;
+  transition: transform 0.3s;
+}
+
+.profile-circle:hover {
+  transform: scale(1.1);
 }
