--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,41 @@ body,
   color: #333;
   min-height: 100vh;
 }
+
+/*job page css*/
+.flowchart-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.flowchart-node {
+  padding: 15px 30px;
+  margin: 10px;
+  border-radius: 10px;
+  background-color: #6a5acd;
+  /* This is a purple color similar to your images */
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.flowchart-course {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+
+.flowchart-jobs-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.flowchart-job {
+  flex: 1 1 auto;
+  min-width: 150px;
+  margin: 10px;
+}
